--- a/src/copia duplicada index.html
+++ b/src/copia duplicada index.html
@@ -64,8 +64,9 @@
 		  </div>
 		
 			<div id="pokeViewHeader" class="header pokedex_container">
-				<img class="arrow-back" src="./assets/images/backArrow.svg" alt="" />
-
+				<img src="./assets/images/backArrow.svg" alt="" />
+				<h2>Bulbasaur</h2>
+				<span class="arrow-back">#0001</span>
 			</div>
 			
 				<div class="pkmn-container">
